# ghostOS

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.ps1  deploy.ps1  setup_build_env.ps1  setup_env.ps1
bootloader/: CMakeLists.txt  boot.S  secure_boot.c
bootloader/include/: bcm2835.h  crypto.h  hw_crypto.h  secure_boot.h
bootloader/src/: secure_boot.c
config/: build.cmake  kernel_config.h  toolchain.cmake  version.h.in
education/: README.md
education/learning/ghost/: ghostc_course.h  ghostos_course.h
education/learning/ghost/course_content/ghostc/: module_01_language.h
education/learning/ghost/course_content/ghostos/: module_01_core.h
education/learning/programming/: c_course.h  cpp_course.h  csharp_course.h
education/learning/programming/course_content/c_programming/: module_01_fundamentals.h
education/modules/c_programming/: module.h
ghostc/: .gitignore  Makefile  README.md  lexer.c  lexer.h  linker.ld  setup_env.ps1
ghostc/examples/: security_ops.gc
ghostc/ide/: ghost_ide.c  ghost_security.c  malware_templates.c
ghostc/include/: ghost_ide.h  ghost_init.h  ghost_security.h  malware_templates.h
ghostc/src/: ghost_init.c  ghost_security.c
ghostc/src/ide/: ghost_ide.c  ghost_ide.h
ghostc/src/runtime/: ghost_runtime.c  ghost_runtime.h
ghostc/src/security/: ghost_security.c
kernel/: CMakeLists.txt
kernel/config/: kernel_config.h
kernel/core/: init.c
kernel/include/: kernel.h  system_config.h
kernel/include/mm/: memory.h
kernel/include/net/: network.h  network_crypto.h  network_errors.h  network_security.h  network_types.h
kernel/include/process/: process.h
kernel/include/security/: crypto.h  secure_boot.h  security.h  security_events.h
kernel/security/: security.h
kernel/src/: kernel.c  kernel_main.c
kernel/src/drivers/: gpio.c
kernel/src/mm/: memory.c
kernel/src/net/: network.c  network_crypto.c  network_protocol.c  network_security.c
kernel/src/process/: process.c
kernel/src/security/: monitor.c  secure_boot.c
security/pentest/: framework.h
tests/: CMakeLists.txt  run_tests.ps1  test_suite.c
